--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #87ceeb;
   --bg: #ffffff;
-  --main-color: #04fffb;
+  --main-color: yellow;
 }
 
 * {
@@ -346,21 +346,21 @@ body {
   position: relative;
   bottom: 0;
   width: 100%;
-  padding: 40px 0;
+  padding: 10px;
   background-color: rgba(1, 1, 1, 0.8);
 }
 .footer .social {
   text-align: center;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   color: var(--main-color);
 }
 .footer .social a {
-  font-size: 25px;
-  color: var(--main-color);
-  border: 2px solid var(--main-color);
+  font-size: 30px;
+  color: white;
+  border: 2px solid yellow;
   width: 42px;
-  height: 42px;
-  line-height: 42px;
+  height: 10px;
+  line-height: 50px;
   display: inline-block;
   text-align: center;
   border-radius: 50%;
@@ -370,7 +370,7 @@ body {
 .footer .social a:hover {
   transform: scale(1.2) translateY(-10px);
   background-color: var(--main-color);
-  color: rgba(1, 1, 1, 0.8);
+  color: white;
   box-shadow: 0 0 25px var(--main-color);
 }
 .footer ul {
@@ -395,7 +395,6 @@ body {
   padding: 0 15px;
 }
 .footer .copyright {
-  margin-top: 50px;
   text-align: center;
   font-size: 16px;
   color: #ffff;
