--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,12 @@ body {
   margin-bottom: 1rem;
 }
 
-.menu p {
-  font-size: 1.5rem;
-  text-align: center;
+.menu ul {
+  font-size: 1.4rem;
   max-width: 50rem;
   margin: auto;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.8;
 }
 
 .menu .row {
